// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScreenHeader renders title + subtitle 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "off",
      "left": "off",
      "right": "off",
      "top": "additive",
    }
  }
  style={
    {
      "backgroundColor": "#FFFFFF",
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "minHeight": 52,
        "paddingHorizontal": 20,
        "paddingVertical": 12,
      }
    }
  >
    <View
      accessibilityLabel="Go back"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      hitSlop={
        {
          "bottom": 12,
          "left": 12,
          "right": 12,
          "top": 12,
        }
      }
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "borderRadius": 22,
          "height": 44,
          "justifyContent": "center",
          "marginRight": 8,
          "opacity": 1,
          "width": 44,
        }
      }
    >
      <Icon
        color="#000000"
        name="chevron-back"
        size={24}
      />
    </View>
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <Text
        accessibilityRole="header"
        numberOfLines={1}
        style={
          {
            "color": "#000000",
            "fontSize": 20,
            "fontWeight": "700",
            "letterSpacing": 0.2,
          }
        }
      >
        Medical SOS
      </Text>
      <Text
        numberOfLines={1}
        style={
          {
            "color": "rgba(0,0,0,0.70)",
            "fontSize": 14,
            "marginTop": 2,
          }
        }
      >
        Tap to send alert
      </Text>
    </View>
  </View>
</RNCSafeAreaView>
`;

exports[`ScreenHeader renders title only (default) 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "off",
      "left": "off",
      "right": "off",
      "top": "additive",
    }
  }
  style={
    {
      "backgroundColor": "#FFFFFF",
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "minHeight": 52,
        "paddingHorizontal": 20,
        "paddingVertical": 12,
      }
    }
  >
    <View
      accessibilityLabel="Go back"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      hitSlop={
        {
          "bottom": 12,
          "left": 12,
          "right": 12,
          "top": 12,
        }
      }
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "borderRadius": 22,
          "height": 44,
          "justifyContent": "center",
          "marginRight": 8,
          "opacity": 1,
          "width": 44,
        }
      }
    >
      <Icon
        color="#000000"
        name="chevron-back"
        size={24}
      />
    </View>
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <Text
        accessibilityRole="header"
        numberOfLines={1}
        style={
          {
            "color": "#000000",
            "fontSize": 20,
            "fontWeight": "700",
            "letterSpacing": 0.2,
          }
        }
      >
        Medical SOS
      </Text>
    </View>
  </View>
</RNCSafeAreaView>
`;
